[package]
name = "webdir"
version = "0.1.2"
authors = ["quininer kel <quininer@live.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/Tyzzer/webdir"
homepage = "https://github.com/Tyzzer/webdir"
readme = "README.md"
description = "A simple asynchronous static file server"

[[bin]]
name = "webdir"
path = "src/bin/webdir.rs"
doc = false

[features]

[dependencies]
serde = "1.0"
structopt = "0.3"
anyhow = "1"
log = { version = "0.4", features = ["release_max_level_debug"] }
slog = "2"
slog-stdlog = "4"
slog-scope = "4"
slog-term = "2"
slog-async = "2"

futures = "0.3"
bytes = "1"
tokio = { version = "1", features = [ "rt-multi-thread", "io-util", "net", "time", "fs", "macros" ] }
hyper = { version = "0.14", features = [ "http1", "http2", "server", "runtime", "stream" ] }
http = "0.2"
headers = "0.3"

tokio-rustls = "0.22"

percent-encoding = "2"
time = "0.2"
bytesize = "1"
byteorder = "1.0"
human-sort = "0.2"
data-encoding = "2"
siphasher = "0.3"
smallvec = "1"
mime = "0.3"
mime_guess = "2"
maud = "0.22"
if_chain = "1"
rand = "0.8"
