[package]
name = "webdir"
version = "0.1.3"
authors = ["quininer kel <quininer@live.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/Tyzzer/webdir"
homepage = "https://github.com/Tyzzer/webdir"
readme = "README.md"
description = "A simple asynchronous static file server"

[[bin]]
name = "webdir"
path = "src/bin/webdir.rs"
doc = false

[dependencies]
argh = "0.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt", "ansi" ] }

futures = "0.3"
bytes = "1"
tokio = { version = "1", features = [ "rt-multi-thread", "io-util", "net", "time", "fs", "macros" ] }
hyper = { version = "1", features = [ "http1", "http2", "server" ] }
hyper-util = { version = "0.1", features = [ "tokio", "http1", "http2", "server" ] }
http = "1"
headers = "0.4"

tokio-rustls = "0.26"
rustls-pemfile = "2"

percent-encoding = "2"
time = { version = "0.3", features = [ "formatting" ] }
bytesize = "1"
human-sort = "0.2"
data-encoding = "2"
siphasher = "1"
smallvec = "1"
mime = "0.3"
mime_guess = "2"
maud = "0.26"
if_chain = "1"
rand = "0.8"
